[gd_scene load_steps=6 format=3 uid="uid://c3o4ox6imk8nq"]

[ext_resource type="Script" path="res://enemy.gd" id="1_rr72e"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sqmwu"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_n0cta"]
material = SubResource("StandardMaterial3D_sqmwu")

[sub_resource type="SphereShape3D" id="SphereShape3D_x8ubr"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7sxc2"]

[node name="Enemy" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_rr72e")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_n0cta")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_x8ubr")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
collision_layer = 8
collision_mask = 10

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_7sxc2")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
